<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="vn.edu.tdc.tourguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="vn.edu.tdc.tourguide.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_screen" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="vn.edu.tdc.tourguide.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/schedule_layout" />
    <fragment
        android:id="@+id/nav_sign_in"
        android:name="vn.edu.tdc.tourguide.ui.signIn.SignInFragment"
        tools:layout="@layout/activity_sign_in" />

</navigation>